@@ -1,3 +1,8 @@
+2003-09-01  Danilo Šegan  <dsegan@gmx.net>
+
+	* rni18n.xml: Added Norwegian to the list, and corrected the sort
+	order.
+
 2003-08-31 John Fleck <jfleck@inkstain.net>
 
 	* rnstandards.xml
